--- a/nfc-android/app/src/main/res/layout/content_home.xml
+++ b/nfc-android/app/src/main/res/layout/content_home.xml
@@ -1,60 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/content_home"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="sk.stuba.fiit.vnos.nfcpass.MainActivity"
-    android:orientation="vertical">
-
-    <TextView
-        android:id="@+id/status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/signed_out" />
-
-    <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_in_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible"
-        tools:visibility="gone" />
-
-    <LinearLayout
-        android:id="@+id/sign_out_and_disconnect"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="horizontal"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp" >
-
-        <TextView
-            android:id="@+id/detail"
-            android:layout_width="124dp"
-            android:layout_height="71dp"
-            tools:text="Firebase User ID: 123456789abc" />
-
-        <Button
-            android:id="@+id/sign_out_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/sign_out" />
-
-        <Button
-            android:id="@+id/disconnect_button"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/disconnect"
-            />
-    </LinearLayout>
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="sk.stuba.fiit.vnos.nfcpass.HomeActivity"
+    tools:showIn="@layout/app_bar_home"
+    android:orientation="vertical"
+    >
 
     <LinearLayout
         android:orientation="horizontal"
@@ -72,7 +31,7 @@
                 android:layout_height="30dp"
                 android:id="@+id/textView5"
                 android:textAlignment="textEnd"
-                android:gravity="center"
+                android:gravity="center|end"
                 android:paddingRight="10dp" />
 
             <TextView
@@ -81,7 +40,7 @@
                 android:layout_height="30dp"
                 android:id="@+id/textView3"
                 android:textAlignment="textEnd"
-                android:gravity="center"
+                android:gravity="center|end"
                 android:paddingRight="10dp"
                 android:layout_below="@+id/textView2"
                 android:layout_alignParentStart="true" />
@@ -92,7 +51,7 @@
                 android:layout_height="30dp"
                 android:id="@+id/textView4"
                 android:textAlignment="textEnd"
-                android:gravity="center"
+                android:gravity="center|end"
                 android:paddingRight="10dp"
                 android:layout_below="@+id/textView3"
                 android:layout_alignParentStart="true" />
@@ -103,7 +62,7 @@
                 android:layout_height="30dp"
                 android:id="@+id/textView2"
                 android:textAlignment="textEnd"
-                android:gravity="center"
+                android:gravity="center|end"
                 android:paddingRight="10dp"
                 android:layout_below="@+id/textView5"
                 android:layout_alignParentStart="true" />
